# Project_Template

./: CMakeLists.txt  README.md
.PVS-Studio/State/: ReportState.json
SRC/: main.PVS-Studio.dfo  main.cpp
include/: json.hpp
